@@ -7,8 +7,6 @@
  */
 package org.elasticsearch.snapshots;
 
-import com.carrotsearch.hppc.cursors.ObjectObjectCursor;
-
 import org.elasticsearch.Version;
 import org.elasticsearch.action.ShardOperationFailedException;
 import org.elasticsearch.action.admin.cluster.snapshots.get.GetSnapshotsRequest;
@@ -30,7 +28,6 @@ import org.elasticsearch.common.xcontent.XContentParser;
 import org.elasticsearch.common.xcontent.XContentParserUtils;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.TimeValue;
-import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.rest.RestStatus;
 
 import java.io.IOException;
@@ -373,30 +370,23 @@ public final class SnapshotInfo implements Comparable<SnapshotInfo>, ToXContentF
     }
 
     public SnapshotInfo(SnapshotsInProgress.Entry entry) {
-        int successfulShards = 0;
-        List<SnapshotShardFailure> shardFailures = new ArrayList<>();
-        for (ObjectObjectCursor<ShardId, SnapshotsInProgress.ShardSnapshotStatus> c : entry.shards()) {
-            if (c.value.state() == SnapshotsInProgress.ShardState.SUCCESS) {
-                successfulShards++;
-            } else if (c.value.state() == SnapshotsInProgress.ShardState.FAILED) {
-                shardFailures.add(new SnapshotShardFailure(c.value.nodeId(), c.key, c.value.reason()));
-            }
-        }
-        this.snapshot = Objects.requireNonNull(entry.snapshot());
-        this.indices = List.copyOf(entry.indices().keySet());
-        this.dataStreams = List.copyOf(entry.dataStreams());
-        this.featureStates = List.copyOf(entry.featureStates());
-        this.state = SnapshotState.IN_PROGRESS;
-        this.reason = null;
-        this.version = Version.CURRENT;
-        this.startTime = entry.startTime();
-        this.endTime = 0L;
-        this.totalShards = entry.shards().size();
-        this.successfulShards = successfulShards;
-        this.shardFailures = Collections.unmodifiableList(shardFailures);
-        this.includeGlobalState = entry.includeGlobalState();
-        this.userMetadata = entry.userMetadata() == null ? null : Map.copyOf(entry.userMetadata());
-        this.indexSnapshotDetails = Collections.emptyMap();
+        this(
+            entry.snapshot(),
+            List.copyOf(entry.indices().keySet()),
+            entry.dataStreams(),
+            entry.featureStates(),
+            null,
+            Version.CURRENT,
+            entry.startTime(),
+            0L,
+            0,
+            0,
+            Collections.emptyList(),
+            entry.includeGlobalState(),
+            entry.userMetadata(),
+            SnapshotState.IN_PROGRESS,
+            Collections.emptyMap()
+        );
     }
 
     public SnapshotInfo(
